Fixes for Chart component (closer was not visible, bind was unnecessary)

--- a/webappbuilder/themes/basic/app.css
+++ b/webappbuilder/themes/basic/app.css
@@ -118,7 +118,7 @@ html, body {
   display: none;
   position: absolute;
   background: rgba(255,255,255,1);
-  padding: 15px;
+  padding-top: 30px;
   border: 1px solid #000000;
   bottom: 0px;
   left: 0;
